@startuml

City "1" -- "0..*" Cinema : contains
Cinema "1" -- "0..*" Showing : has
Movie "1" -- "0..*" Showing : concerns
User "1" -- "0..*" Booking : makes
Showing "1" -- "0..*" Booking : receives

class City {
  - long id
  - String name
  - String imageUrl
}

class Cinema {
  - long id
  - String name
  - String address
  - double communityRating
  - String imageUrl
}

class Movie {
  - long id
  - String title
  - int year
  - int duration
  - LocalDate releaseDate
  - double criticsRating
  - double communityRating
  - String genre
  - String director
  - List<String> actors
  - String imageUrl
}

class Showing {
  - long id
  - LocalDateTime startDateTime
  - BigDecimal price
  - int availableSeats
}

class Booking {
  - long id
  - int numberOfSeats
  - LocalDateTime bookedAt
  - BigDecimal totalPrice
  - String status
}

class User {
  - long id
  - String username
  - String password
  - String firstName
  - String lastName
  - String role
}

@enduml